--- a/public/CSS/13. Creatin page loyuot process/index.html
+++ b/public/CSS/13. Creatin page loyuot process/index.html
@@ -4,10 +4,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!--Определяет заголовок документа. Элемент <title> не является частью документа и не показывается напрямую
- на веб-странице. В операционной системе Windows текст заголовка отображается в левом верхнем углу окна браузера. 
- Допускается использовать только один тег <title> на документ и размещать его в контейнере <head>. -->
   <title>shablon</title>
 
   <!--Устанавливает связь с внешним документом вроде файла со стилями или со шрифтами.
@@ -23,8 +19,11 @@
     <!--Тег <figure> используется для группирования любых элементов, например, изображений и подписей к ним.-->
     <figure>
       <img src="assets/img/flower.svg" alt="">
+
       <!--Содержит описание для тега <figure>. Тег <figcaption> должен быть первым или последним элементом в группе.
-        -->
+       <figure>
+        <figcaption>Описание</figcaption>
+       </figure> -->
       <figcaption>WOODIES</figcaption>
     </figure>
     <nav>
