--- a/index.html
+++ b/index.html
@@ -7,16 +7,32 @@
   <meta charset="UTF-8">
   <meta author="Gavrilita Dorin">
   <meta keywords="Здоровье тела, здоровый разум, правильное питание, принципы здоровья">
-  <link rel="stylesheet" href="assets/css/style.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <title>Healthy life</title>
 </head>
 <!--Отображается все видимое содержание страницы-->
 <body>
 
-  <h1>В здоровом теле - здоровый дух!</h1>
+  <header>
+    <section>
+      <div class="name of sity">
+        <h1>В здоровом теле - здоровый дух!</h1>
+
+      </div>
+
+      <div>
+        <img src="#" alt="">
+      </div>
+  </header>
+  </section>
+
+
+  <footer>
+
+  </footer>
   
 </body>
 </html>
