--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <!--Внутри тега html хранится все содержимое страницы-->
 <html lang="ru">
-  <!-- #region -->
+<!-- #region -->
+
 <head>
   <meta charset="UTF-8">
   <meta author="Gavrilita Dorin">
@@ -13,26 +14,110 @@
 
   <title>Healthy life</title>
 </head>
-<!--Отображается все видимое содержание страницы-->
+
 <body>
-
-  <header>
-    <section>
-      <div class="name of sity">
-        <h1>В здоровом теле - здоровый дух!</h1>
-
-      </div>
-
-      <div>
-        <img src="#" alt="">
-      </div>
+  <header class="header">
+    <figure>
+      <img src="assets/images/logo.png" alt="">
+      <figcaption>REASONABLE NUTRITION</figcaption>
+    </figure>
+    <nav>
+      <a href="#" class="active">Home</a>
+      <a href="#">Principles</a>
+      <a href="#">Types of nutrition</a>
+      <a href="#">Resources</a>
+    </nav>
   </header>
+  <section>
+    <div>
+      <img src="/assets/images/Healthy-Eating.jpg" alt="">
+      <span>To be healthy or just to appear? <br>
+        That is the question!</span>
+    </div>
+    <div>
+      <div>
+        <h1>Healthy lifestyle</h1>
+        <p>In a healthy body healthy mind. An integrated approach to your health. Here you will find solutions to your
+          health problems.</p>
+      </div>
+      <div>
+        <a href="#">Learn more</a>
+        <img src="assets/images/Vector-learnmore.png" alt="">
+      </div>
+      <div>
+        <span>“At the heart of every disease is its cause, which no medicine can eliminate.”</span>
+        <img src="/assets/images/Vector-go-dn.png" alt="">
+      </div>
+    </div>
+
+  </section>
+  <section>
+    <header>
+      <p>2/</p>
+      <h2>Health principles</h2>
+    </header>
+    <article>
+      <p>The most important and most important principle of health is to exclude everything that harms you and use what
+        is beneficial in moderation.</p>
+      <div>
+        <a href="#">Rational nutrition</a>
+        <img src="/assets/images/Vector-learnmore.png" alt="">
+      </div>
+      <div>
+        <a href="#">Physically active life</a>
+        <img src="/assets/images/Vector-learnmore.png" alt="">
+      </div>
+      <div>
+        <a href="#">Rejection of bad habits</a>
+        <img src="/assets/images/Vector-learnmore.png" alt="">
+      </div>
+      <div>
+        <a href="#">Recreation</a>
+        <img src="/assets/images/Vector-learnmore.png" alt="">
+      </div>
+      <div>
+        <a href="">Emotional well-being</a>
+        <img src="/assets/images/Vector-learnmore.png" alt="">
+      </div>
+    </article>
+    <img src="/assets/images/unnamed-3.png" alt="">
+  </section>
+  <section>
+    <header>
+      <p>3/</p>
+      <h2>Why plant-based foods?</h2>
+    </header>
+    <article>
+      <img src="/assets/images/products.jpg" alt="">
+      <div>
+        <div>
+          <p><span>W</span>hen discussing the question "what to eat?" usually there is a shift towards the question of "who are we - predators or not"? It is clear that from a physiological point of view - the presence or absence of claws and fangs, this issue is not resolved. From a moral standpoint, due to the diversity of cultures and traditions, it is also impossible to solve it. From t.zr. of evolution, meat-eating has played and continues to play a huge role in human survival. Let's not set ourselves the task of proving the harmfulness of eating meat, we will only consider the processes occurring in the body when eating different products, and each person must draw conclusions himself.</p>
+        </div>
+        <div>
+          <a href="#">Learn more</a>
+        <img src="assets/images/Vector-learnmore.png" alt="">
+        </div>
+      </div>
+    </article>
+  </section>
+  <section>
+    <header>
+      <p>4/</p>
+      <h2>Resources</h2>
+    </header>
+    <article>
+      <section>
+        <img src="/assets/images/china.jfif" alt="">
+        <img src="/assets/images/cover.png" alt="">
+      </section>
+      <section>
+        <img src="" alt="">
+        <img src="" alt="">
+      </section>
+    </article>
   </section>
 
 
-  <footer>
-
-  </footer>
-  
 </body>
+
 </html>
