--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Yeseva+One&display=swap" rel="stylesheet">
 
   <title>Healthy life</title>
 </head>
@@ -91,11 +94,17 @@
       <img src="/assets/images/products.jpg" alt="">
       <div>
         <div>
-          <p><span>W</span>hen discussing the question "what to eat?" usually there is a shift towards the question of "who are we - predators or not"? It is clear that from a physiological point of view - the presence or absence of claws and fangs, this issue is not resolved. From a moral standpoint, due to the diversity of cultures and traditions, it is also impossible to solve it. From t.zr. of evolution, meat-eating has played and continues to play a huge role in human survival. Let's not set ourselves the task of proving the harmfulness of eating meat, we will only consider the processes occurring in the body when eating different products, and each person must draw conclusions himself.</p>
+          <p><span>W</span>hen discussing the question "what to eat?" usually there is a shift towards the question of
+            "who are we - predators or not"? It is clear that from a physiological point of view - the presence or
+            absence of claws and fangs, this issue is not resolved. From a moral standpoint, due to the diversity of
+            cultures and traditions, it is also impossible to solve it. From t.zr. of evolution, meat-eating has played
+            and continues to play a huge role in human survival. Let's not set ourselves the task of proving the
+            harmfulness of eating meat, we will only consider the processes occurring in the body when eating different
+            products, and each person must draw conclusions himself.</p>
         </div>
         <div>
           <a href="#">Learn more</a>
-        <img src="assets/images/Vector-learnmore.png" alt="">
+          <img src="assets/images/Vector-learnmore.png" alt="">
         </div>
       </div>
     </article>
@@ -107,15 +116,46 @@
     </header>
     <article>
       <section>
-        <img src="/assets/images/china.jfif" alt="">
-        <img src="/assets/images/cover.png" alt="">
+        <figure>
+          <img src="/assets/images/china.jfif" alt="">
+          <img src="/assets/images/cover.png" alt="">
+          <figcaption><a href="#">More books</a></figcaption>
+        </figure>
       </section>
       <section>
-        <img src="" alt="">
-        <img src="" alt="">
+        <figure>
+          <img src="assets/images/image 1.png" alt="">
+          <img src="assets/images/vegetables.webp" alt="">
+          <img src="assets/images/raw-or-vegan.webp" alt="">
+          <figcaption><a href="#"></a>More videos</figcaption>
+        </figure>
+      </section>
+      <section>
+        <figure>
+          <img src="assets/images/insta1.png" alt="">
+          <img src="assets/images/insta2.png" alt="">
+          <figcaption><a href="#">More information</a></figcaption>
+        </figure>
       </section>
     </article>
   </section>
+  <footer>
+    <section>
+      <figure>
+        <img src="assets/images/logo.png" alt="">
+        <figcaption>REASONABLE NUTRITION</figcaption>
+      </figure>
+      <p><a href="#"></a>gavrilitadorin5@gmail.com</p>
+      <p><a href="#"></a>Balti, Moldova</p>
+    </section>
+    <section>
+      <p><a href="#">Contacts</a></p>
+      <p><a href="#"></a>Telegram</p>
+      <p><a href="#">Instagram</a></p>
+    </section>
+
+
+  </footer>
 
 
 </body>
