--- a/index.html
+++ b/index.html
@@ -31,25 +31,27 @@
       <a href="#">Resources</a>
     </nav>
   </header>
-  <section>
-    <div>
+  <section id="main">
+    <div class="heart">
       <img src="/assets/images/Healthy-Eating.jpg" alt="">
-      <span>To be healthy or just to appear? <br>
-        That is the question!</span>
+      <!-- <span>To be healthy or just to appear? <br>
+        That is the question!</span> -->
     </div>
-    <div>
-      <div>
-        <h1>Healthy lifestyle</h1>
+    <div class="description">
+      <div class="description-heading">
+        <h2>Healthy lifestyle</h2>
         <p>In a healthy body healthy mind. An integrated approach to your health. Here you will find solutions to your
           health problems.</p>
       </div>
-      <div>
-        <a href="#">Learn more</a>
-        <img src="assets/images/Vector-learnmore.png" alt="">
-      </div>
-      <div>
+      <a href="#">
+        <figure>
+          <figcaption>Learn more</figcaption>
+          <img src="assets/images/Vector-learnmore.png" alt="">
+        </figure>
+      </a>
+      <div class="citate">
         <span>“At the heart of every disease is its cause, which no medicine can eliminate.”</span>
-        <img src="/assets/images/Vector-go-dn.png" alt="">
+        <!-- <img src="/assets/images/Vector-go-dn.png" alt=""> -->
       </div>
     </div>
 
