--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </header>
   <section id="main">
     <div class="heart">
-      <img src="/assets/images/Healthy-Eating.jpg" alt="">
+      <img src="assets/images/Healthy-Eating.jpg" alt="">
       <!-- <span>To be healthy or just to appear? <br>
         That is the question!</span> -->
     </div>
@@ -56,36 +56,39 @@
     </div>
 
   </section>
-  <section>
-    <header>
-      <p>2/</p>
-      <h2>Health principles</h2>
-    </header>
-    <article>
-      <p>The most important and most important principle of health is to exclude everything that harms you and use what
-        is beneficial in moderation.</p>
-      <div>
-        <a href="#">Rational nutrition</a>
-        <img src="/assets/images/Vector-learnmore.png" alt="">
-      </div>
-      <div>
-        <a href="#">Physically active life</a>
-        <img src="/assets/images/Vector-learnmore.png" alt="">
-      </div>
-      <div>
-        <a href="#">Rejection of bad habits</a>
-        <img src="/assets/images/Vector-learnmore.png" alt="">
-      </div>
-      <div>
-        <a href="#">Recreation</a>
-        <img src="/assets/images/Vector-learnmore.png" alt="">
-      </div>
-      <div>
-        <a href="">Emotional well-being</a>
-        <img src="/assets/images/Vector-learnmore.png" alt="">
-      </div>
-    </article>
-    <img src="/assets/images/unnamed-3.png" alt="">
+  <section class="principl">
+    <div id="brake">
+      <header>
+        <!-- <p>2/</p> -->
+        <h2>Health principles</h2>
+      </header>
+      <article>
+        <p>The most important and most important principle of health is to exclude everything that harms you and use
+          what
+          is beneficial in moderation.</p>
+        <div>
+          <a href="#">Rational nutrition</a>
+          <img src="/assets/images/Vector-learnmore.png" alt="">
+        </div>
+        <div>
+          <a href="#">Physically active life</a>
+          <img src="/assets/images/Vector-learnmore.png" alt="">
+        </div>
+        <div>
+          <a href="#">Rejection of bad habits</a>
+          <img src="/assets/images/Vector-learnmore.png" alt="">
+        </div>
+        <div>
+          <a href="#">Recreation</a>
+          <img src="/assets/images/Vector-learnmore.png" alt="">
+        </div>
+        <div>
+          <a href="">Emotional well-being</a>
+          <img src="/assets/images/Vector-learnmore.png" alt="">
+        </div>
+      </article>
+    </div>
+    <img src="assets/images/unnamed-3.png" class="shield" alt="">
   </section>
   <section>
     <header>
