--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,168 @@
+<!--Служебный тег для брайзера, который сообщает, на каком языке написан данный докумен-->
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+<!--Внутри тега html хранится все содержимое страницы-->
+<html lang="ru">
+<!-- #region -->
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.6.3/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.6.3/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.6.3/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/9.6.3/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/9.6.3/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/9.6.3/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/9.6.3/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/9.6.3/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/9.6.3/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/9.6.3/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta author="Gavrilita Dorin">
+  <meta keywords="Здоровье тела, здоровый разум, правильное питание, принципы здоровья">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Yeseva+One&display=swap" rel="stylesheet">
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+  <title>Healthy life</title>
+</head>
+
+<body>
+  <header class="header">
+    <figure>
+      <img src="assets/images/logo.png" alt="">
+      <figcaption>REASONABLE NUTRITION</figcaption>
+    </figure>
+    <nav>
+      <a href="#" class="active">Home</a>
+      <a href="#">Principles</a>
+      <a href="#">Types of nutrition</a>
+      <a href="#">Resources</a>
+    </nav>
+  </header>
+  <section id="main">
+    <div class="heart">
+      <img src="assets/images/Healthy-Eating.jpg" alt="">
+      <!-- <span>To be healthy or just to appear? <br>
+        That is the question!</span> -->
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+    <div class="description">
+      <div class="description-heading">
+        <h2>Healthy lifestyle</h2>
+        <p>In a healthy body healthy mind. An integrated approach to your health. Here you will find solutions to your
+          health problems.</p>
+      </div>
+      <a href="#">
+        <figure>
+          <figcaption>Learn more</figcaption>
+          <img src="assets/images/Vector-learnmore.png" alt="">
+        </figure>
+      </a>
+      <div class="citate">
+        <span>“At the heart of every disease is its cause, which no medicine can eliminate.”</span>
+        <!-- <img src="/assets/images/Vector-go-dn.png" alt=""> -->
+      </div>
+    </div>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+  </section>
+  <section class="principl">
+    <div id="brake">
+      <header>
+        <!-- <p>2/</p> -->
+        <h2>Health principles</h2>
+      </header>
+      <article>
+        <p>The most important and most important principle of health is to exclude everything that harms you and use
+          what
+          is beneficial in moderation.</p>
+        <div>
+          <a href="#">Rational nutrition</a>
+          <img src="/assets/images/Vector-learnmore.png" alt="">
+        </div>
+        <div>
+          <a href="#">Physically active life</a>
+          <img src="/assets/images/Vector-learnmore.png" alt="">
+        </div>
+        <div>
+          <a href="#">Rejection of bad habits</a>
+          <img src="/assets/images/Vector-learnmore.png" alt="">
+        </div>
+        <div>
+          <a href="#">Recreation</a>
+          <img src="/assets/images/Vector-learnmore.png" alt="">
+        </div>
+        <div>
+          <a href="">Emotional well-being</a>
+          <img src="/assets/images/Vector-learnmore.png" alt="">
+        </div>
+      </article>
+    </div>
+    <img src="assets/images/unnamed-3.png" class="shield" alt="">
+  </section>
+  <section>
+    <header>
+      <p>3/</p>
+      <h2>Why plant-based foods?</h2>
+    </header>
+    <article>
+      <img src="/assets/images/products.jpg" alt="">
+      <div>
+        <div>
+          <p><span>W</span>hen discussing the question "what to eat?" usually there is a shift towards the question of
+            "who are we - predators or not"? It is clear that from a physiological point of view - the presence or
+            absence of claws and fangs, this issue is not resolved. From a moral standpoint, due to the diversity of
+            cultures and traditions, it is also impossible to solve it. From t.zr. of evolution, meat-eating has played
+            and continues to play a huge role in human survival. Let's not set ourselves the task of proving the
+            harmfulness of eating meat, we will only consider the processes occurring in the body when eating different
+            products, and each person must draw conclusions himself.</p>
+        </div>
+        <div>
+          <a href="#">Learn more</a>
+          <img src="assets/images/Vector-learnmore.png" alt="">
+        </div>
+      </div>
+    </article>
+  </section>
+  <section>
+    <header>
+      <p>4/</p>
+      <h2>Resources</h2>
+    </header>
+    <article>
+      <section>
+        <figure>
+          <img src="/assets/images/china.jfif" alt="">
+          <img src="/assets/images/cover.png" alt="">
+          <figcaption><a href="#">More books</a></figcaption>
+        </figure>
+      </section>
+      <section>
+        <figure>
+          <img src="assets/images/image 1.png" alt="">
+          <img src="assets/images/vegetables.webp" alt="">
+          <img src="assets/images/raw-or-vegan.webp" alt="">
+          <figcaption><a href="#"></a>More videos</figcaption>
+        </figure>
+      </section>
+      <section>
+        <figure>
+          <img src="assets/images/insta1.png" alt="">
+          <img src="assets/images/insta2.png" alt="">
+          <figcaption><a href="#">More information</a></figcaption>
+        </figure>
+      </section>
+    </article>
+  </section>
+  <footer>
+    <section>
+      <figure>
+        <img src="assets/images/logo.png" alt="">
+        <figcaption>REASONABLE NUTRITION</figcaption>
+      </figure>
+      <p><a href="#"></a>gavrilitadorin5@gmail.com</p>
+      <p><a href="#"></a>Balti, Moldova</p>
+    </section>
+    <section>
+      <p><a href="#">Contacts</a></p>
+      <p><a href="#"></a>Telegram</p>
+      <p><a href="#">Instagram</a></p>
+    </section>
 
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e: any) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
+
+  </footer>
+
+
+</body>
+
 </html>
